--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "runtime": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "cp index-init.js runtime-init.js && cp index-add.js runtime-add.js && cp index-remove.js runtime-remove.js"
   },
   "repository": {
     "type": "git",
