--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "version": "echo \"Mààààà\""
+    "postversion": "echo \"Mààààà\""
   },
   "repository": {
     "type": "git",
