--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "ejs": "^2.3.3",
     "minimist": "^1.1.2",
     "path-is-absolute": "^1.0.0",
-    "shelljs": "^0.5.1",
-    "utils-merge": "^1.0.0"
+    "shelljs": "^0.5.1"
   }
 }
