--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -73,8 +73,7 @@ script
       --spinSleepTime $SPIN_SLEEP_TIME \
       start -c "$COMMAND" \
       $APPLICATION \
-      <%- Object.keys(commandOptions).length > 0 ? '"' : '' %><% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %><%- Object.keys(commandOptions).length > 0 ? '"' : '' %>
-
+      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %>
 
 end script
 
