upstart template test

--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -7,7 +7,7 @@
 # You will need to set the environment variables noted below to conform to
 # your use case, and should change the description.
 #
-description "Example upstart script for a Node.js process"
+description "upstart script for <%= appName %>, using forever to keep it running. run `forever list` to check the status."
 
 # start on runlevel [2345]
 start on startup
@@ -55,23 +55,20 @@ script
     # installed globally, which it should be.
     PATH=$NODE_BIN_DIR:$PATH
 
-    # set user defined environment variables
-    <% Object.keys(environmentVariables).forEach(function(key){ var value = environmentVariables[key]; %>
-    <%- key %>=<%- value%><% }); %>
-
     # The minUptime and spinSleepTime settings stop Forever from thrashing if
     # the application fails immediately on launch. This is generally necessary
     # to avoid loading development servers to the point of failure every time
     # someone makes an error in application initialization code, or bringing
     # down production servers the same way if a database or other critical
     # service suddenly becomes inaccessible.
-    exec forever \
+    # set user defined environment variables
+    <% Object.keys(environmentVariables).forEach(function(key){ var value = environmentVariables[key]; %><%- key %>=<%- value%> && <% }); %> forever start \
+      -c $COMMAND \
       --pidFile $PIDFILE \
       -a \
       -l $LOG \
       --minUptime $MIN_UPTIME \
       --spinSleepTime $SPIN_SLEEP_TIME \
-      start -c "$COMMAND" \
       $APPLICATION \
       <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %>
 
