upstart template test

--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -8,6 +8,7 @@
 # your use case, and should change the description.
 #
 description "upstart script for <%= appName %>, using forever to keep it running. run `forever list` to check the status."
+usage
 
 # start on runlevel [2345]
 start on startup
@@ -70,7 +71,8 @@ script
       --minUptime $MIN_UPTIME \
       --spinSleepTime $SPIN_SLEEP_TIME \
       $APPLICATION \
-      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %>
+      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %> \
+       &
 
 end script
 
