upstart template test

--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -71,8 +71,7 @@ script
       --minUptime $MIN_UPTIME \
       --spinSleepTime $SPIN_SLEEP_TIME \
       $APPLICATION \
-      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %> \
-       &
+      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %>
 
 end script
 
