--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -8,7 +8,7 @@
 # your use case, and should change the description.
 #
 description "upstart script for <%= appName %>, using forever to keep it running. run `forever list` to check the status."
-usage
+usage "run `forever list` to check the status."
 
 # start on runlevel [2345]
 start on startup
@@ -56,14 +56,18 @@ script
     # installed globally, which it should be.
     PATH=$NODE_BIN_DIR:$PATH
 
+    # set user defined environment variables
+    <% Object.keys(environmentVariables).forEach(function(key){ var value = environmentVariables[key]; %>
+    export <%- key %>=<%- value%><% }); %>
+
     # The minUptime and spinSleepTime settings stop Forever from thrashing if
     # the application fails immediately on launch. This is generally necessary
     # to avoid loading development servers to the point of failure every time
     # someone makes an error in application initialization code, or bringing
     # down production servers the same way if a database or other critical
     # service suddenly becomes inaccessible.
-    # set user defined environment variables
-    <% Object.keys(environmentVariables).forEach(function(key){ var value = environmentVariables[key]; %><%- key %>=<%- value%> && <% }); %> forever start \
+
+    exec forever start \
       -c $COMMAND \
       --pidFile $PIDFILE \
       -a \
@@ -71,7 +75,8 @@ script
       --minUptime $MIN_UPTIME \
       --spinSleepTime $SPIN_SLEEP_TIME \
       $APPLICATION \
-      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %>
+      <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %> \
+      &
 
 end script
 
@@ -83,5 +88,5 @@ pre-stop script
     # its data. Note that doing it this way means that each application that
     # runs under Forever must have a different start file name, regardless of
     # which directory it is in.
-    exec forever stop $APPLICATION
+    exec forever stop $APPLICATION &
 end script
