--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -37,6 +37,9 @@ env NODE_PATH="/usr/local/lib/node_modules"
 # The command to run
 env COMMAND="<%- command %>"
 
+# The application source code directory process.pwd()
+env PWD="<%- pwd %>"
+
 # The application startup Javascript file path.
 env APPLICATION="<%= application %>"
 
@@ -57,7 +60,7 @@ script
 
     # set user defined environment variables
     <% Object.keys(environmentVariables).forEach(function(key){ var value = environmentVariables[key]; %>
-    export <%- key %>=<%- value%><% }); %>
+    export <%- key %>=<%- value %><% }); %>
 
     # The minUptime and spinSleepTime settings stop Forever from thrashing if
     # the application fails immediately on launch. This is generally necessary
@@ -65,6 +68,8 @@ script
     # someone makes an error in application initialization code, or bringing
     # down production servers the same way if a database or other critical
     # service suddenly becomes inaccessible.
+
+    cd $PWD
 
     exec forever start \
       -c $COMMAND \
