fix application root directory

--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -37,9 +37,6 @@ env NODE_PATH="/usr/local/lib/node_modules"
 # The command to run
 env COMMAND="<%- command %>"
 
-# The application source code directory process.pwd()
-env PWD="<%- pwd %>"
-
 # The application startup Javascript file path.
 env APPLICATION="<%= application %>"
 
@@ -62,14 +59,15 @@ script
     <% Object.keys(environmentVariables).forEach(function(key){ var value = environmentVariables[key]; %>
     export <%- key %>=<%- value %><% }); %>
 
+    # change directory to the application root directory
+    cd <%- pwd %>
+
     # The minUptime and spinSleepTime settings stop Forever from thrashing if
     # the application fails immediately on launch. This is generally necessary
     # to avoid loading development servers to the point of failure every time
     # someone makes an error in application initialization code, or bringing
     # down production servers the same way if a database or other critical
     # service suddenly becomes inaccessible.
-
-    cd $PWD
 
     exec forever start \
       -c $COMMAND \
