fixes forever workingDir with absolute application path

--- a/templates/upstart.conf
+++ b/templates/upstart.conf
@@ -76,6 +76,7 @@ script
       -l $LOG \
       --minUptime $MIN_UPTIME \
       --spinSleepTime $SPIN_SLEEP_TIME \
+      --workingDir <%- pwd %> \
       $APPLICATION \
       <% Object.keys(commandOptions).forEach(function(key){ var value = commandOptions[key]; if (key !== '_') { var prefix = key.length === 1 ? '-' : '--' %><%- prefix %><%- key %> <%- value%> <% }}); %> \
       &
